<resources>
    <string name="app_name">APPetit</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_dailyoffer">Daily Offer</string>
    <string name="title_reservation">Reservation</string>

    <string name="time">Reservation time:</string>
    <string name="set_price">Set price</string>
    <string name="point_symbol">.</string>
    <string name="euro_symbol">€</string>
    <string name="quantity">Available quantity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="example_email_it">example@email.it</string>
    <string name="password">password</string>
    <string name="address">Address</string>
    <string name="es_3341234567">es: 3341234567</string>
    <string name="sign_up1">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password_Signup">Password</string>
    <string name="e_mail">E-Mail</string>


</resources>
