<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myScrollView1"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Startup.SignUp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:paddingTop="@android:dimen/app_icon_size"
            android:src="@drawable/person"
            app:civ_border_color="#FFf"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewMail"
            app:layout_constraintTop_toBottomOf="@+id/img_profile"
            android:autofillHints="emailAddress" />
        <ImageView
            android:id="@+id/imageViewMail"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/email"
            app:layout_constraintLeft_toLeftOf="@+id/mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <ImageView
            android:id="@+id/imageViewCousine"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_surname"
            app:layout_constraintLeft_toLeftOf="@+id/surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewName" />
        <ImageView
            android:id="@+id/plus"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
            app:layout_constraintEnd_toEndOf="@+id/img_profile"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_add_circle_black_24dp" />

        <ImageView
            android:id="@+id/imageViewLock"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintLeft_toLeftOf="@+id/psw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMail" />

        <ImageView
            android:id="@+id/imageViewphone"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/phone"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAddr" />
        <ImageView
            android:id="@+id/imageViewAddr"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/address"
            app:layout_constraintLeft_toLeftOf="@+id/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCousine" />

        <ImageView
            android:id="@+id/imageViewName"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/name"
            app:layout_constraintLeft_toLeftOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLock" />



        <EditText
            android:id="@+id/psw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:hint="@string/password_Signup"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewLock"
            app:layout_constraintTop_toBottomOf="@+id/mail"
            android:autofillHints="password" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textMultiLine|textCapSentences"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewCousine"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewName"
            app:layout_constraintTop_toBottomOf="@+id/psw"
            android:autofillHints="name" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:hint="@string/es_3341234567"
            android:inputType="phone"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewphone"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/address"
            android:inputType="none"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAddr"
            app:layout_constraintTop_toBottomOf="@+id/surname" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            android:background="@drawable/button_corners_round"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up1"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>